--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "cross-env DB_ENV=developement jest --watch",
+    "test": "cross-env DB_ENV=testing jest --watchAll",
     "start": "node index.js",
     "server": "nodemon index.js"
   },
